# junior-growth-marketing-specialist

./: .gitignore  README.md
youtube-b2b-saas-research/: main.py  pyproject.toml  scripts.md
youtube-b2b-saas-research/research/: sources.yaml  synthesis.md
youtube-b2b-saas-research/research/linkedin-posts/bradenricchini/: posts.md
youtube-b2b-saas-research/research/linkedin-posts/dan-martell/: posts.md
youtube-b2b-saas-research/research/linkedin-posts/jonathan-rintala/: posts.md
youtube-b2b-saas-research/research/linkedin-posts/marc-lou/: posts.md
youtube-b2b-saas-research/research/linkedin-posts/nathan-latka/: posts.md
youtube-b2b-saas-research/research/linkedin-posts/rob-walling/: posts.md
youtube-b2b-saas-research/research/linkedin-posts/sam-dunning/: posts.md
youtube-b2b-saas-research/research/linkedin-posts/samu-kovács/: posts.md
youtube-b2b-saas-research/research/linkedin-posts/simon-høiberg/: posts.md
youtube-b2b-saas-research/research/linkedin-posts/tk-kader/: posts.md
youtube-b2b-saas-research/research/youtube-transcripts/bradenricchini/: 2025-10-21-how-to-find-outlier-youtube-videos-that-help-you-book-calls.md  2025-10-27-jordan-welchs-youtube-advice-for-2025.md  2025-11-04-how-business-owners-win-youtubes-new-algorithm.md  2025-11-28-how-we-helped-aaron-book-15-calls-in-30-days-from-youtube.md  2025-12-09-i-tried-writing-a-youtube-script-with-ai-in-30-minutes.md  2025-12-16-give-me-12-min-and-ill-teach-you-how-to-book-15-callsmonth-from-youtube.md  (+4 more)
youtube-b2b-saas-research/scripts/: collect_youtube_transcripts.py  source_utils.py
(+84 files in other folders)
