[project]
name = "youtube-b2b-saas-research"
version = "0.1.0"
description = "YouTube content strategy for B2B SaaS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.6.9",
]
